0.8.2
 - Bugfixes:
   - Young's modulus not updated (dclab 0.2.9.dev9) (#190)
   - UnicodeDecodeError on fcs-export (fcswrite 0.1.3.dev13) (#189)
 - Code cleanup:
   - Use the term "feature" consistently (dclab 0.2.9.dev2)
   - Use file format agnostic fluorescence trace keys (dclab 0.2.9.dev4)
0.8.1
 - Update internal configuration parameter names (dclab 0.2.8)
 - Cache event counts of tdms-based data sets on disk (#179)
 - Bugfixes:
   - KeyError when isoelastics not defined for combination of axes (#177)
   - Wrong channel width when loading ShapeIn 2.0.1 tdms data (dclab 0.2.9)
0.8.0
 - Remember directory for searching missing measurement data
 - Bugfixes:
   - Cannot open old session files with hierarchies when the measurement
     data location has changed (#174)
   - Cannot open polygon filters exported with ShapeOut versions < 0.7.6 (#174)
 - Code cleanup:
   - Move program-relevant data to "shapeout" directory
   - Move computation of isoelastics to dclab (dclab 0.2.6.dev23)
   - Create separate directory for appveyor recipe
   - Remove unused/incomplete support for internationalization
0.7.9
 - Add on-the-fly computation of contour inertia ratios
 - Add menu options to save current event image (#164)
 - Bugfixes:
   - Isoelastics are not shown (#145)
0.7.8
 - Introduce unique identifiers for measurements (dclab 0.2.5.dev4)
 - Include ffmpeg in the Windows installer (#165)
 - Bugfixes:
   - dclab 0.2.6.dev2: Correctly identify contour files (#166, #169)
   - dclab 0.2.5.dev11: Allow contour data indices larger than uint8 (#167)
 - Refactoring:
   - dclab 0.2.5.dev10: Event images are returned as 2D ndarray
0.7.7
 - Add "Preferences" menu:
   - Allow to (dis/en)able session autosaving
   - Allow to (dis/en)able checking for updates
   - Allow to (dis/en)able expert mode (#157)
 - Bugfixes:
   - Hidden axes ("area_cvx", "area_msd", "frame") visible in analysis tab
   - Display of fluorescence traces broken (#159)
   - Display of contour plots broken (#160)